# templates

./: README.md
cpp/sample-cmake/: CMakeLists.txt  README.md
cpp/sample-cmake/cmake_project/: CMakeLists.txt  main.cpp
cpp/sample-cmake/cmake_project/liba/: CMakeLists.txt  liba.cpp  liba.h
cpp/sample-cmake/cmake_project/libb/: CMakeLists.txt  libb.cpp  libb.h
cpp/sample-cmake/src/: main_a.cpp
cpp/sample-cmake/src/liba/: CMakeLists.txt  liba.cpp  liba.hpp
cpp/sample-cmake/src/libb/: CMakeLists.txt  libb.cpp  libb.hpp
latex/beamer/: presentation.tex
latex/cv/: main.tex
latex/tikz_diagrams/: main.tex
latex/tikz_diagrams/inputs/: example.tikz
latex/uc3m-report/: bibliography.bib  main.tex
latex/uc3m-report/contents/: content.tex  example_code.tex
obsidian/default-vault/: hotkeys.json
obsidian/default-vault/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  workspace.json
obsidian/default-vault/.obsidian/plugins/obsidian-admonition/: data.json
obsidian/default-vault/.obsidian/plugins/obsidian-advanced-slides/: data.json
obsidian/default-vault/meetings/: meetings.md
obsidian/default-vault/system/: snippets.md
obsidian/default-vault/templates/: meeting.md
obsidian/vault/: .obsidian.vimrc  Last Week.md
obsidian/vault/.obsidian/: app.json  appearance.json  community-plugins.json  daily-notes.json  hotkeys.json
obsidian/vault/.obsidian/plugins/templater-obsidian/: data.json
obsidian/vault/templates/: Daily Note.md  Meeting.md  Support Ticket.md
readme/: basic-project-readme.md
(+8 files in other folders)
